# PseudoC

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/pseudoc/: ast.cpp  ast.hpp  irl.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  variable-map.cpp  variable-map.hpp
src/pseudoc/ast/: base.cpp  base.hpp  definition.cpp  definition.hpp  expression.cpp  expression.hpp  flow.cpp  flow.hpp  statement.cpp  statement.hpp
src/pseudoc/irl/: generator.hpp  instructions.cpp  instructions.hpp  segment.cpp  segment.hpp  type.cpp  type.hpp  value.hpp
src/pseudoc/parser/: definition.cpp  expression.cpp  statement.cpp
test-files/: ass.c  ass.s  ass_failure.c  duvida.c  duvida.ll  entrypoint.c  entrypoint.s  f.c  f.s  ff.c  ff.s  fs.c  if.c  if.s  if.s.s  master-example.c  master-example.s  other.c  t.c  t.ll  t.s  t1.ll  variables.c
